<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dam3.imc.MainActivity"
    android:weightSum="1"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:textSize="18sp"
        tools:text="@string/altura"
        android:textStyle="normal|bold"
        android:id="@+id/textViewAltura"
        android:text="Altura" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextAltura" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEdad"
        android:layout_weight="0.10"
        tools:text="@string/edad"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:text="Edad" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextEdad" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPeso"
        android:layout_weight="0.14"
        tools:text="@string/peso"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:gravity="center"
        android:text="Peso" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextPeso" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:weightSum="3"
        android:layout_weight="0.27"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textViewSexo"
            tools:text="@string/sexo"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_weight="0.81"
            android:text="Sexo"
            android:gravity="center_horizontal|center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="113dp"
            android:layout_height="187dp"
            android:gravity="right|center"
            android:layout_gravity="right">
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonHombre"
                    tools:text="@string/hombre"
                    android:layout_gravity="center_vertical|center"
                    android:text="Hombre"
                    android:textAlignment="textStart"
                    android:gravity="center|start"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonMujer"
                    tools:text="@string/mujer"
                    android:text="Mujer" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="Calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalcular"
        android:layout_weight="0.05"
        tools:text="@string/botonCalcular" />
</LinearLayout>
